Attempts to git clone gpm-packages in Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ language: rust
 
 script:
   - cargo build --verbose --all
+  - git clone https://${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/aerys/gpm-packages.git
+  
