--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
-language: rust
+language: C
 
 sudo: required
+
+os:
+  - linux
+
+before_deploy: ""
 
 services:
   - docker
 
 script:
-  - docker run --rm -it -v "$(pwd)":/home/rust/src ekidd/rust-musl-builder cargo build --release --target x86_64-unknown-linux-musl
+  - ./script/build-release.sh myapp ${TRAVIS_TAG}-${TRAVIS_OS_NAME}
+  - strip gpm
   - git clone https://${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/aerys/gpm-packages.git
