--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,24 @@ sudo: required
 os:
   - linux
 
-before_deploy: ""
-
 services:
   - docker
 
 script:
-  - ./script/build-release.sh myapp ${TRAVIS_TAG}-${TRAVIS_OS_NAME}
+  - VERSION=`grep -Po '(?<=version = ")[0-9\.]+' Cargo.toml`
+  - ./script/build-release.sh gpm
   - strip gpm
-  - git clone https://${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/aerys/gpm-packages.git
+  
+deploy:
+  provider: script
+  script:
+    - git clone https://${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/aerys/gpm-packages.git
+    - mkdir -p gpm-packages/gpm-linux64
+    - cd gpm-packages/gpm-linux64
+    - rm -rf gpm.zip
+    - zip gpm.zip gpm
+    - git add gpm.zip
+    - git commit gpm.zip -m "Publish gpm-linux64 version ${VERSION}."
+    - git tag gpm-linux64/${VERSION}
+    - git push
+    - git push --tags
