--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,15 @@ services:
   - docker
 
 script:
-  - VERSION=`grep -Po '(?<=version = ")[0-9\.]+' Cargo.toml`
   - ./script/build-release.sh gpm
   - strip gpm
   
 deploy:
   provider: script
+  on:
+    - branch: feature/travis-ci
   script:
+    - VERSION=`grep -Po '(?<=version = ")[0-9\.]+' Cargo.toml`
     - git clone https://${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/aerys/gpm-packages.git
     - mkdir -p gpm-packages/gpm-linux64
     - cd gpm-packages/gpm-linux64
