Add script/publish.sh to publish from Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,18 +13,7 @@ script:
   
 deploy:
   skip_cleanup: true
-  provider: script
   on:
     branch: feature/travis-ci
-  script:
-    - VERSION=`grep -Po '(?<=version = ")[0-9\.]+' Cargo.toml`
-    - git clone https://${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/aerys/gpm-packages.git
-    - mkdir -p gpm-packages/gpm-linux64
-    - cd gpm-packages/gpm-linux64
-    - rm -rf gpm.zip
-    - zip gpm.zip gpm
-    - git add gpm.zip
-    - git commit gpm.zip -m "Publish gpm-linux64 version ${VERSION}."
-    - git tag gpm-linux64/${VERSION}
-    - git push
-    - git push --tags
+  provider: script
+  script: bash script/publish.sh
