Remove debug stuff.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ script:
 deploy:
   skip_cleanup: true
   on:
-    branch: feature/travis-ci
+    tags: true
   provider: script
   script: bash script/publish.sh
