--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
   - docker
 
 script:
-  - ./script/build-release.sh gpm
+  - ./script/build-release.sh
   
 deploy:
   skip_cleanup: true
