--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ dotenv = "0.15.0"
 err-derive = "0.2.3"
 termimad = "0.8.17"
 crossterm = "0.16.0"
+base64 = "0.13.0"
+zeroize = "1.3.0"
 
 [build-dependencies]
 vergen = "3.1.0"
